--- a/prefect.yaml.jinja
+++ b/prefect.yaml.jinja
@@ -11,7 +11,7 @@ build:
     requires: prefect-docker>=0.2.0
     image_name: my-repo/my-image
     tag: my-tag
-    dockerfile: auto
+    dockerfile: Dockerfile
     push: true
 
 push: null
