--- a/{% if ci_cd_pipelines == 'Github Actions' %}.github{% endif %}/workflows/publish.yml.jinja
+++ b/{% if ci_cd_pipelines == 'Github Actions' %}.github{% endif %}/workflows/publish.yml.jinja
@@ -29,7 +29,7 @@ jobs:
       {% if docker_registry_type == 'DockerHub' -%}
       - uses: docker/login-action@v2
         with:
-        {% raw -%}
+        {%- raw %}
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
         {%- endraw %}
