cloud run worker & artifact registry for docker

--- a/deployment.yaml.jinja
+++ b/deployment.yaml.jinja
@@ -1,42 +1,39 @@
 definitions:
     work_pools:
-        {% if deployment_infrastructure == 'Google Cloud Run' %}
+        # You can go to prefect cloud to create or update a work pool
+        {% if deployment_infrastructure == 'Google Cloud Run' -%}
         cloud-run-pool: &cloud-run-pool
             name: cloud-run-pool
             work_queue_name: default
             job_variables:
                 image: "{{ image_name }}"
-                docker-pool: &docker-pool
-        {% endif %}
-        {% if deployment_infrastructure == 'Docker' %}
+        {%- endif %}
+        {% if deployment_infrastructure == 'Docker' -%}
         docker-pool: &docker-pool
             name: docker-pool
             work_queue_name: default
             job_variables:
                 image: "{{ image_name }}"
-        {% endif %}
-        {% if deployment_infrastructure == 'Process' %}
+        {%- endif %}
+        {% if deployment_infrastructure == 'Process' -%}
         process-pool: &process-pool
             name: process-pool
             work_queue_name: default
-        {% endif %}
+        {%- endif %}
 
 
 deployments:
-- name: my_{{ project_name|replace('-', '_') }}_deployment
+- name: my_{{ project_name|replace('-', '_') }}_deployment  # TODO: Name your deployment
   version: 1
   tags: []
-  description: Put your deployment description here
+  description: Put your deployment description here  # TODO: Describe your deployment
   schedule: {}
-  # The entrypoint is the path to the flow function.
-  # The format is <path_to_flow_file>:<flow_function_name>
-  # This is just an example
-  entrypoint: {{ project_name|replace('-', '_') }}/{{ project_name|replace('-', '_') }}_flow.py:{{ project_name|replace('-', '_') }}_flow
+  entrypoint: <path_to_flow_file.py>:<flow_function_name>  # TODO: Update the deployment path
   parameters: {}
-  {% if deployment_infrastructure == 'Google Cloud Run' %}
+  {% if deployment_infrastructure == 'Google Cloud Run' -%}
   work_pool: *cloud-run-pool
-  {% elif deployment_infrastructure == 'Docker' %}
+  {% elif deployment_infrastructure == 'Docker' -%}
   work_pool: *docker-pool
-  {% elif deployment_infrastructure == 'Process' %}
+  {% elif deployment_infrastructure == 'Process' -%}
   work_pool: *process-pool
-  {% endif %}
+  {%- endif %}
